<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="pouS6Warnings" Id="{b3787da7-6c25-4881-be08-a57d4d9bdeab}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM pouS6Warnings
VAR
	
idbMsgWarn: FB_CheckMessageBounds;
END_VAR
]]></Declaration>
    <Implementation>
      <NWL>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="NWLImplementationObject">
              <v n="NetworkListComment">""</v>
              <v n="DefaultViewMode">"Ld"</v>
              <l2 n="NetworkList" cet="Network">
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">"Check if array contains message"</v>
                  <v n="Title">"Check Machine Warning"</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeBox">
                    <o>
                      <v n="BoxType">"FB_CheckMessageBounds"</v>
                      <o n="Instance" t="Operand">
                        <v n="Operand">"idbMsgWarn"</v>
                        <v n="Type">"FB_CheckMessageBounds"</v>
                        <v n="Comment">""</v>
                        <v n="SymbolComment">""</v>
                        <v n="Address">""</v>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <v n="LValue">false</v>
                        <v n="Boolean">false</v>
                        <v n="IsInstance">true</v>
                        <v n="Id">47L</v>
                      </o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <n />
                          <o>
                            <v n="Operand">"GlobalMessages.gMsgS3Stat.IsWarning"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">21L</v>
                          </o>
                          <o>
                            <v n="Operand">"GlobalMessages.gMsgS3Stat.numWarning"</v>
                            <v n="Type">"INT"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">22L</v>
                          </o>
                          <o>
                            <v n="Operand">"GlobalMessages.gMsgS3.Warning.topMessage"</v>
                            <v n="Type">"STRING(255)"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">23L</v>
                          </o>
                          <o>
                            <v n="Operand">"GlobalMessages.gMsgS3.Warning.allMessage"</v>
                            <v n="Type">"STRING"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">31L</v>
                          </o>
                          <o>
                            <v n="Operand">"GlobalMessages.gListMsgS3.WarningViewMsg"</v>
                            <v n="Type">"ARRAY [1..HMIData.gNumberOfMessagesScreen] OF typeMessageRow"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">41L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">true</v>
                        <v n="Extensible">false</v>
                      </o>
                      <n n="InputFlags" />
                      <l2 n="InputItems">
                        <o t="BoxTreeTerminator">
                          <n n="Input" />
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="Id">14L</v>
                        </o>
                        <o t="BoxTreeOperand">
                          <o n="Operand" t="Operand">
                            <v n="Operand">"GlobalMessages.gMsgS6.Warning"</v>
                            <v n="Type">"typeMessage"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">"Constant_Address_Serialization_Value"</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">16L</v>
                          </o>
                          <v n="Id">15L</v>
                        </o>
                        <o t="BoxTreeOperand">
                          <o n="Operand" t="Operand">
                            <v n="Operand">"52000"</v>
                            <v n="Type">"UINT"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">33L</v>
                          </o>
                          <v n="Id">32L</v>
                        </o>
                        <o t="BoxTreeOperand">
                          <o n="Operand" t="Operand">
                            <v n="Operand">"FALSE"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">true</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">50L</v>
                          </o>
                          <v n="Id">49L</v>
                        </o>
                        <o t="BoxTreeOperand">
                          <o n="Operand" t="Operand">
                            <v n="Operand">"TRUE"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">true</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">52L</v>
                          </o>
                          <v n="Id">51L</v>
                        </o>
                      </l2>
                      <o n="InputParam" t="ParamList">
                        <l2 n="Names" cet="String">
                          <v>EN</v>
                          <v>iqArrayToCheck</v>
                          <v>iMessageGroup</v>
                          <v>isAlarm</v>
                          <v>isWarning</v>
                        </l2>
                        <l2 n="Types" cet="String">
                          <v>BOOL</v>
                          <v>typeMessage[REF]</v>
                          <v>INT</v>
                          <v>BOOL</v>
                          <v>BOOL</v>
                        </l2>
                      </o>
                      <o n="OutputParam" t="ParamList">
                        <l2 n="Names" cet="String">
                          <v>ENO</v>
                          <v>qAnyMsgActive</v>
                          <v>qMsgNumberActive</v>
                          <v>qSingleMessage</v>
                          <v>qAllMessages</v>
                          <v>qMsgRows</v>
                        </l2>
                        <l2 n="Types" cet="String">
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>INT</v>
                          <v>STRING(255)</v>
                          <v>STRING</v>
                          <v>ARRAY [1..HMIData.gNumberOfMessagesScreen] OF typeMessageRow</v>
                        </l2>
                      </o>
                      <v n="CallType" t="Operator">FunctionBlock</v>
                      <v n="EN">true</v>
                      <v n="ENO">true</v>
                      <n n="STSnippet" />
                      <v n="ContainsExtensibleInputs">false</v>
                      <v n="ProvidesSTSnippet">false</v>
                      <v n="Id">48L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">9L</v>
                </o>
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">"set global bit"</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeAssign">
                    <o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"GlobalMessages.gAnyFaultMessage"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">2</v>
                              <v n="Fixed">true</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">true</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">66L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeOperand">
                        <o n="Operand" t="Operand">
                          <v n="Operand">"idbMsgWarn.qAnyMsgActive"</v>
                          <v n="Type">"BOOL"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">true</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">true</v>
                          <v n="IsInstance">false</v>
                          <v n="Id">65L</v>
                        </o>
                        <v n="Id">64L</v>
                      </o>
                      <v n="Id">67L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">63L</v>
                </o>
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" />
                  <l2 n="Connectors" />
                  <v n="Id">5L</v>
                </o>
              </l2>
              <v n="BranchCounter">0</v>
              <v n="ValidIds">true</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="BoxTreeAssign">{9873c309-1f09-4ebf-9078-42d8057ef11b}</Type>
            <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
            <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
            <Type n="BoxTreeTerminator">{5f9848d3-568d-4cc5-9e31-8e28e9607ff1}</Type>
            <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
            <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
            <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
            <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
            <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
            <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </NWL>
    </Implementation>
  </POU>
</TcPlcObject>